syntax = "proto3";

package todo.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/qclaogui/golang-api-server/api/todo/v1/todopb";

// Tasks wo have to do
message ToDo {
  // Unique integer identifier of the todo task
  string id = 1;

  string title = 2;

  string description = 3;

  bool completed = 4;

  google.protobuf.Timestamp created_at = 5;

  google.protobuf.Timestamp updated_at = 6;
}

message CreateRequest {
  // API version
  string api = 1;

  ToDo item = 2;
}

message CreateResponse {
  // API version
  string api = 1;

  string id = 2;
}

message GetRequest {
  // API version
  string api = 1;

  string id = 2;
}

message GetResponse {
  // API version
  string api = 1;

  ToDo item = 2;
}

message UpdateRequest {
  // API version
  string api = 1;

  ToDo item = 2;
}

message UpdateResponse {
  // API version
  string api = 1;

  int64 updated = 2;
}

message DeleteRequest {
  // API version
  string api = 1;

  string id = 2;
}

message DeleteResponse {
  // API version
  string api = 1;

  int64 deleted = 2;
}

message ListRequest {
  // API version
  string api = 1;

  int32 limit = 2;

  bool completed = 3;
}

message ListResponse {
  // API version
  string api = 1;

  // List of all
  repeated ToDo items = 2;
}

service ToDoService {
  rpc Create(CreateRequest) returns (CreateResponse);

  rpc Get(GetRequest) returns (GetResponse);

  rpc Update(UpdateRequest) returns (UpdateResponse);

  rpc List(ListRequest) returns (ListResponse);

  rpc Delete(DeleteRequest) returns (DeleteResponse);
}
